--- a/J型.ipynb
+++ b/J型.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "def connect_to_database():\n",
     "    \"\"\"连接到数据库\"\"\"\n",
-    "    return pymysql.connect(host='172.16.50.150', user='root', password='fz@2023&', database='input')\n",
+    "    return pymysql.connect(host='###.##.##.###', user='###', password='###', database='###')\n",
     "\n",
     "def execute_query(cursor, query):\n",
     "    \"\"\"执行数据库查询\"\"\"\n",
